--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                             <input type="checkbox" id="politica" value="acceptPolicy"> <label for="politica">He llegit i accepto la política de privacitat</label>
                             
                             <button type="submit">SUBSCRIU-ME</button>
+                            <input type="file" accept="image/*" capture="camera">
                         </form>
                     </div>
                 </section>
